<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GlucosaControl</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="wecome">Bienvenido a Control de Glucosa</string>
    <string name="start">Iniciar</string>
    <string name="regMedico">Registrar Medico</string>
    <string name="name">Nombre</string>
    <string name="firstLastName">Apellido Paterno</string>
    <string name="secondLastName">Apellido Materno</string>
    <string name="eMail">Correo</string>
    <string name="phone">Telefono Celular</string>
    <string name="acept">Aceptar</string>
    <string name="regPaciente">Registrar Paciente</string>
    <string name="usrName">Nombre de usuario</string>
    <string name="passwd">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="newControl">Capturar Nivel</string>
    <string name="showControls">Ver Niveles</string>
    <string name="graph">Grafica</string>
    <string name="settings">Configuraciones</string>
    <string name="glucoseLevel">Nivel de Glucosa</string>
    <string name="mgdl">mg/dl</string>
    <string name="addControl">Aceptar</string>

</resources>